--- a/css/header.css
+++ b/css/header.css
@@ -22,8 +22,15 @@ header a, ul {
   gap: 40px;                     
   list-style: none;
   margin: 0;
-  padding: 0.5rem;
+  /* padding: 0.5rem; */
 }
+
+.logo img {
+width: 20%;
+height: auto;
+align-items: center;
+}
+
 
 header li {
   margin: 0;
@@ -35,9 +42,9 @@ header a {
   font-weight: 600;
   letter-spacing: 0.04em;
   color: #ffffff;
-  transition: color 0.2s ease;
 }
 
 header a:hover {
   color: #424981;
 }
+
