--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@
 }
 
 .grid-item:hover {
+  transform: scale(1.05);
   border-color: #88aece;
  }
 
@@ -40,7 +41,9 @@
   color: #777;
   margin-bottom: -50px;
 }
-.discount {
+
+
+.new-price {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -50,6 +53,74 @@
   background-color: red;
 } */
 
-.sold-out img {
-  opacity: 0%;
+
+.old-price {
+  color: #777;
+  text-decoration: line-through;
+}
+
+.new-price {
+  margin-top: -50px;
+}
+
+.discount {
+  background-color: black;
+  color: #ffffff;
+}
+
+.product-card {
+  background-color: #ffffff;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin: 100px;
+  border-radius: 12px;
+}
+
+.product-card img {
+  max-width: 400px;
+  height: auto;
+  border-radius: 12px;
+}
+
+.product-info {
+  align-content: center;
+}
+
+.product-info h2 {
+  font-size: 18px;
+}
+
+.info {
+  color: #777;
+}
+
+.buy {
+  background-color: #88aece;
+  color: white;
+  padding: 10px;
+  border-radius: 12px;
+  border: none;
+}
+
+.buy:hover {
+  background-color:rgb(106, 104, 104);
+  cursor: pointer;
+}
+
+.sold-out {
+  position: relative;
+  opacity: 0.5;  
+}
+
+.sold-out::after {
+  content: "UDSOLGT";
+  position: absolute;
+  top: 70%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: rgba(0, 0, 0, 0.7);
+  color: #fff;
+  font-size: 20px;
+  padding: 6px 12px;
+  border-radius: 6px;
 }
