--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@
 .product-card {
   background-color: #ffffff;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   margin: 100px;
   border-radius: 12px;
 }
@@ -97,7 +97,7 @@
 .buy {
   background-color: #88aece;
   color: white;
-  padding: 10px;
+  padding: 15px;
   border-radius: 12px;
   border: none;
 }
@@ -123,4 +123,13 @@
   font-size: 20px;
   padding: 6px 12px;
   border-radius: 6px;
+}
+
+.purchase-box {
+  align-content: center;
+  text-align: center;
+}
+
+.size {
+  padding: 40px;
 }
