--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,8 @@
 .purchase-box {
   align-content: center;
   text-align: center;
+  background-color: #b5b9bc;
+  border-radius: 12px;
 }
 
 .size {
