--- a/css/header.css
+++ b/css/header.css
@@ -48,3 +48,12 @@ header a:hover {
   color: #424981;
 }
 
+@media (max-width: 768px) {
+
+  img {
+    min-width: 80px;
+    height: auto;
+}
+
+}
+
