--- a/css/forside.css
+++ b/css/forside.css
@@ -18,13 +18,13 @@
   color: white;
 }
 
-.hero-buttons {
+.categorylist {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 20px;
 }
 
-.hero-buttons a {
+.categorylist a {
   text-decoration: none;
   padding: 12px 28px;
   border-radius: 30px;
@@ -34,7 +34,7 @@
   font-weight: 500;
 }
 
-.hero-buttons a:hover {
+.categorylist a:hover {
   background: #88aece;
   color: white;
 }
