--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,6 @@
 }
 
 
-
 .price {
   color: #777;
   text-decoration: line-through;
@@ -97,11 +96,11 @@
   color: white;
   padding: 15px;
   border-radius: 12px;
-  border: none;
+  border: 1px solid #fff;
 }
 
 .buy:hover {
-  background-color:rgb(106, 104, 104);
+  background-color:#424981;
   cursor: pointer;
 }
 
@@ -128,8 +127,6 @@
 .purchase-box {
   align-content: center;
   text-align: center;
-  background-color: #b5b9bc;
-  border-radius: 12px;
 }
 
 .size {
@@ -143,10 +140,14 @@
   padding-top: 30px;
 }
 
-#filters {
+#filters, #sorting {
   display: flex;
   justify-content: center;
   gap: 15px;
+}
+
+#sorting {
+  padding-top: 15px;
 }
 
 #filters button {
@@ -158,12 +159,32 @@
   font-weight: 500;
   border: none;
   cursor: pointer;
+  border: 1px solid #fff;
 }
+
+#sorting button {
+padding: 12px 28px;
+  border-radius: 30px;
+  background: #424981;
+  color: white;
+  font-size: 16px;
+  font-weight: 500;
+  border: none;
+  cursor: pointer;
+  border: 1px solid #fff;
+}
+
 
 #filters button:hover {
   background: #424981;
   color: white;
 }
+
+#sorting button:hover {
+  background: #88aece;
+  color: white;
+}
+
 
 @media (max-width: 768px) {
    .product-card {
