--- a/css/forside.css
+++ b/css/forside.css
@@ -48,7 +48,7 @@ header {
   .hero-logo {
     font-size: 42px;
   }
-  .hero-buttons {
+  .categorylist {
     display: flex;
     flex-direction: column;
     gap: 12px;
